@@ -8,12 +8,18 @@ RMD160 f20078640a13176763381811e2050d0b9cd0ca1e files/sun-jdk-1.7.env 925
 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581 files/sun-jdk-1.7.env 925
 DIST jdk-6-rc-bin-b102-linux-amd64-11_oct_2006.bin 56820912 RMD160 844775a83441dc2e210007120106fd97b92a4f2b SHA1 74edf427d4581ded66c277fc8e8c92275c01e539 SHA256 97aa393e1886f9c0e23a42ab72ae6760693d9e1b94592d69f37665dd21f04a21
 DIST jdk-6-rc-bin-b102-linux-i586-11_oct_2006.bin 63183059 RMD160 f0f9e3301046d7adc2e49871a76fdb45845f0429 SHA1 d98ce28be8495f1ae6aeb21063c817cfb08050c5 SHA256 c8b5dd0ca5216f5ff0f88587f89fd543b910c228166ed16e0586b19a0bc0a036
+DIST jdk-6-rc-bin-b103-linux-amd64-19_oct_2006.bin 56816086 RMD160 504f01714733bf8230d94663c86a623adb06ffdb SHA1 f59c2e23f62c155f89f0f2fd6f78612475e47430 SHA256 00b90c002a5d85ce333d8958b3fdeff43d73f16e61813adb6377242c7d86eea4
+DIST jdk-6-rc-bin-b103-linux-i586-19_oct_2006.bin 63180253 RMD160 fcf21666b4edaff19b76609dcfb4cb7152f1c2da SHA1 ff4ef18b19bb5c2739afd3943bc0640cd37feb8c SHA256 e399c88a446af05eb0193be7463c9da6845583984b770eb306a847e8932c7292
 DIST jdk-7-ea-bin-b01-linux-amd64-21_jul_2006.bin 54658299 RMD160 ed4b340985612111352efaf85a61de7575c9ed15 SHA1 8d562939ea044c1ef6bc482a57c4880590118927 SHA256 7d48514a4c5089d1c6d24e7b79d29c021444b3939de9aa3956f04eac07060edb
 DIST jdk-7-ea-bin-b01-linux-i586-21_jul_2006.bin 60975958 RMD160 5f9c864d6551a222660b1bdc0f95ff3801abea0d SHA1 00e11d0f8b0498a975ed6423ded0590c8fa2d8e9 SHA256 66a83524e77f8a518065056fd577c08fa34d7b95713ed606249821ac836ec85f
 EBUILD sun-jdk-1.6.0.0_beta102.ebuild 5366 RMD160 8f6acc932e4b86c444b39e1d3c71359162d17d5c SHA1 4bbb283134cb4cbfcb8d04024eac9164e280205e SHA256 218518559807a6da0b58d4220ff32f68e1c3e3dd18b554303a09c321870238d5
 MD5 c3788c2dfa2a6535908a14891f68177a sun-jdk-1.6.0.0_beta102.ebuild 5366
 RMD160 8f6acc932e4b86c444b39e1d3c71359162d17d5c sun-jdk-1.6.0.0_beta102.ebuild 5366
 SHA256 218518559807a6da0b58d4220ff32f68e1c3e3dd18b554303a09c321870238d5 sun-jdk-1.6.0.0_beta102.ebuild 5366
+EBUILD sun-jdk-1.6.0.0_beta103.ebuild 5366 RMD160 14b1f0fc5b7c5e3f05b900c916bd1a120876c970 SHA1 2764102fa3d392753e2c21cac22d859ffd82e8e8 SHA256 2cb5eb96b76c18fafe7cd7f473fee55df76ff4d4b0ffa9bcbc772350813d4c6f
+MD5 9471347fe26d35520d68b9a700cf6f41 sun-jdk-1.6.0.0_beta103.ebuild 5366
+RMD160 14b1f0fc5b7c5e3f05b900c916bd1a120876c970 sun-jdk-1.6.0.0_beta103.ebuild 5366
+SHA256 2cb5eb96b76c18fafe7cd7f473fee55df76ff4d4b0ffa9bcbc772350813d4c6f sun-jdk-1.6.0.0_beta103.ebuild 5366
 EBUILD sun-jdk-1.7.0.0_alpha01.ebuild 5366 RMD160 f084f7f55f6ffa909ee6d484168f16510e4bb92f SHA1 6fa6690e3c3f3e5600a116a9e876be3ed6e786ef SHA256 6c16f76e979e3cc18f1e41f4f18210f295c764b2e602218c1b34e50c5c6b415d
 MD5 58031070ba5c0252659b0131fa0d1dfa sun-jdk-1.7.0.0_alpha01.ebuild 5366
 RMD160 f084f7f55f6ffa909ee6d484168f16510e4bb92f sun-jdk-1.7.0.0_alpha01.ebuild 5366
@@ -25,6 +31,9 @@ SHA256 7dfa9f1470a212d0ab49843755138975b8b0fa80f3b74e61bc28759fd5498f1f ChangeLo
 MD5 bcda8295c8fdfc12bbb75a50bc959318 files/digest-sun-jdk-1.6.0.0_beta102 641
 RMD160 345288e67c7448b09508eb4e13e9ac36f11a8e13 files/digest-sun-jdk-1.6.0.0_beta102 641
 SHA256 f9038955733a329a357fc1e15dc0be3a8fbbe6411d37b031a210a51299750786 files/digest-sun-jdk-1.6.0.0_beta102 641
+MD5 a52d7805574ebe69140584e33b63b57d files/digest-sun-jdk-1.6.0.0_beta103 641
+RMD160 9ceb7140472e284cb8a7f1d83638653ac7152cd5 files/digest-sun-jdk-1.6.0.0_beta103 641
+SHA256 47c82d1707b429e43038e6b28da06a842c09f4c775c8ebe2184c066e047dd9e6 files/digest-sun-jdk-1.6.0.0_beta103 641
 MD5 6997b2e263aae69cf60722acd88c610c files/digest-sun-jdk-1.7.0.0_alpha01 635
 RMD160 af1825e949d6a3e8978d3854c5151b26acff895d files/digest-sun-jdk-1.7.0.0_alpha01 635
 SHA256 690481a7af47b65475997fbbfea959d54be2aa4e60cb089f48516c32ea6fd0f1 files/digest-sun-jdk-1.7.0.0_alpha01 635
