@@ -2,6 +2,10 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Oct 2006; Federico Fissore <federico@fsfe.org>
+  +sun-jdk-1.6.0.0_beta103.ebuild:
+  New snapshot bump.
+
   12 Oct 2006; Vlastimil Babka <caster@gentoo.org>
   -sun-jdk-1.6.0.0_beta101.ebuild, +sun-jdk-1.6.0.0_beta102.ebuild:
   New snapshot bump.
